@@ -43,7 +43,9 @@
 		<dependency org="commons-codec" name="commons-codec" rev="1.3"
 			conf="*->default" />
 
-		<dependency org="org.apache.hadoop" name="hadoop-core" rev="0.20.2"
+                <dependency org="org.apache.hadoop" name="hadoop-mapred" rev="0.22.0" conf="*->default"/>
+                <dependency org="org.apache.hadoop" name="hadoop-hdfs" rev="0.22.0" conf="*->default"/>
+		<dependency org="org.apache.hadoop" name="hadoop-common" rev="0.22.0"
 			conf="*->default">
 			<exclude org="hsqldb" name="hsqldb" />
 			<exclude org="net.sf.kosmosfs" name="kfs" />
@@ -67,7 +69,7 @@
 
 		<!--artifacts needed for testing -->
 		<dependency org="junit" name="junit" rev="3.8.1" conf="test->default" />
-		<dependency org="org.apache.hadoop" name="hadoop-test" rev="0.20.2"
+		<dependency org="org.apache.hadoop" name="hadoop-common-test" rev="0.22.0"
 			conf="test->default" />
 
 		<dependency org="org.mortbay.jetty" name="jetty" rev="6.1.22"
